# publicly

./: Authfile  Cargo.toml  LICENSE  README.md  flake.nix
src/: authfile.rs  entity.rs  error.rs  lookup.rs  main.rs  message.rs  terminal_handle.rs  ui.rs
tests/fixtures/: multiple_entries_authfile  valid_authfile
