[package]
name = "publicly"
version = "1.0.2"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.27"
ratatui = "0.29.0"
ringbuffer = "0.16.0"
russh = "0.54.3"
thiserror = "2.0.16"
tokio = "1.47.1"
tui-textarea = { version = "0.7.0", features = ["termion"] }
